[gd_scene load_steps=13 format=2]

[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HoverStart.tres" type="StyleBox" id=2]
[ext_resource path="res://Area2D.tres" type="StyleBox" id=3]
[ext_resource path="res://normalstart.tres" type="StyleBox" id=4]
[ext_resource path="res://ScoreText.gd" type="Script" id=5]
[ext_resource path="res://Label.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.952941, 0.431373, 0.490196 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.952941, 0.431373, 0.490196 )
border_blend = true
shadow_color = Color( 1, 0.952941, 0.431373, 0.490196 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.952941, 0.431373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.952941, 0.431373, 1 )
border_blend = true
shadow_color = Color( 1, 0.952941, 0.431373, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ord" type="Label" parent="CenterContainer"]
margin_left = 439.0
margin_top = 264.0
margin_right = 584.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 3 )
text = "TEST"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 3.0
margin_top = 488.0
margin_right = 1027.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer2"]
margin_left = 227.0
margin_top = 24.0
margin_right = 796.0
margin_bottom = 64.0
custom_constants/hseparation = 60
columns = 3

[node name="Navneord" type="Button" parent="CenterContainer2/GridContainer"]
margin_right = 134.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Navneord"

[node name="Udsagnsord" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 194.0
margin_right = 360.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Udsagnsord"

[node name="Tillægsord" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 420.0
margin_right = 569.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Tillægsord"

[node name="CenterContainer3" type="CenterContainer" parent="."]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="CenterContainer3"]
visible = false
margin_left = 485.0
margin_top = 18.0
margin_right = 539.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 7 )
text = "TEST"
script = ExtResource( 5 )

[node name="Færdig" type="Button" parent="."]
margin_left = 904.0
margin_top = 48.0
margin_right = 992.0
margin_bottom = 78.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "FÆRDIG"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer2/GridContainer/Navneord" to="CenterContainer/Ord" method="_on_Navneord_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/Udsagnsord" to="CenterContainer/Ord" method="_on_Udsagnsord_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/Tillægsord" to="CenterContainer/Ord" method="_on_Tillgsord_pressed"]
[connection signal="pressed" from="Færdig" to="CenterContainer/Ord" method="_on_Frdig_pressed"]
